feat: make app deployment ready with Docker, authentication fixes, and comprehensive documentation
- Add Docker configuration for containerized deployment
- Fix authentication hook and dashboard visibility
- Add comprehensive README with setup and deployment instructions
- Update .gitignore for production deployment
- Create .env.example for environment configuration
- Add docker-compose.yml for easy deployment
- Fix server stability issues for production builds
- Add health checks and proper error handling

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rest-express",
+  "name": "testcraft-world",
   "version": "1.0.0",
   "type": "module",
   "license": "MIT",
@@ -8,7 +8,8 @@
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
-    "db:push": "drizzle-kit push"
+    "db:push": "drizzle-kit push",
+    "db:setup": "echo 'Please update your DATABASE_URL in .env file, then run: npm run db:push'"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -47,6 +48,7 @@
     "cmdk": "^1.1.1",
     "connect-pg-simple": "^10.0.0",
     "date-fns": "^3.6.0",
+    "dotenv": "^17.2.3",
     "drizzle-orm": "^0.39.1",
     "drizzle-zod": "^0.7.0",
     "embla-carousel-react": "^8.6.0",
@@ -56,6 +58,7 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
+    "mysql2": "^3.15.2",
     "next-themes": "^0.4.6",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
