--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "license": "MIT",
   "scripts": {
     "dev": "NODE_ENV=development tsx server/index.ts",
+    "dev:next": "next dev",
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
+    "build:next": "next build",
     "start": "NODE_ENV=production node dist/index.js",
+    "start:next": "next start",
     "check": "tsc",
     "db:push": "drizzle-kit push",
     "db:setup": "echo 'Please update your DATABASE_URL in .env file, then run: npm run db:push'"
@@ -59,6 +62,7 @@
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
     "mysql2": "^3.15.2",
+    "next": "^14.0.0",
     "next-themes": "^0.4.6",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
@@ -97,6 +101,8 @@
     "autoprefixer": "^10.4.20",
     "drizzle-kit": "^0.31.4",
     "esbuild": "^0.25.0",
+    "eslint": "^8.0.0",
+    "eslint-config-next": "^14.0.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.20.5",
