Upgrade to Latest Next.js 15 with Enhanced Features
- Update Next.js to latest 15.x.x version (removed ^15.0.0 for latest)
- Update eslint-config-next to latest 15.x.x version
- Enhance next.config.js with Next.js 15 optimizations:
  - Turbopack configuration
  - Enhanced image optimization with SVG support
  - Security headers configuration
  - Webpack customizations
  - Advanced logging for development
- Update tsconfig.next.json with ES2022 target and latest TypeScript features
- Enhance tailwind.config.next.js with Next.js 15 optimizations and new animations
- Update nixpacks.toml with Yarn 1.x and frozen lockfile for reproducible builds
- Improve app/layout.tsx with enhanced metadata API and viewport configuration
- Add modern CSS features and accessibility improvements

Features enabled:
- Next.js 15 App Router with latest optimizations
- React 19 experimental features ready
- Turbopack for faster builds
- Enhanced security headers
- Modern TypeScript configurations
- Improved Tailwind CSS with animations
- Better SEO and accessibility

--- a/tsconfig.next.json
+++ b/tsconfig.next.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "ES2017",
-    "lib": ["dom", "dom.iterable", "ES6"],
+    "target": "ES2022",
+    "lib": ["dom", "dom.iterable", "ES2022"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -23,8 +23,13 @@
       "@/*": ["./*"],
       "@/components/*": ["./components/*"],
       "@/lib/*": ["./lib/*"],
-      "@/styles/*": ["./styles/*"]
-    }
+      "@/styles/*": ["./styles/*"],
+      "@/app/*": ["./app/*"]
+    },
+    // Next.js 15 optimizations
+    "verbatimModuleSyntax": true,
+    "allowImportingTsExtensions": false,
+    "noUncheckedIndexedAccess": true
   },
   "include": [
     "next-env.d.ts",
