--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,8 +1,8 @@
 [phases.setup]
-nixPkgs = ["nodejs-20_x", "yarn"]
+nixPkgs = ["nodejs-20_x", "yarn-1_x"]
 
 [phases.install]
-cmds = ["yarn install"]
+cmds = ["yarn install --frozen-lockfile"]
 
 [phases.build]
 cmds = ["yarn build:next"]
