--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
     "mysql2": "^3.15.2",
-    "next": "^15.0.0",
+    "next": "15",
     "next-themes": "^0.4.6",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
@@ -105,7 +105,7 @@
     "drizzle-kit": "^0.31.4",
     "esbuild": "^0.25.0",
     "eslint": "^8.0.0",
-    "eslint-config-next": "^15.0.0",
+    "eslint-config-next": "15",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.20.5",
