Replace BlogStreamPro with Testcraft across all files

--- a/.env.coolify.example
+++ b/.env.coolify.example
@@ -1,4 +1,4 @@
-# Coolify Environment Variables for BlogStreamPro
+# Coolify Environment Variables for Testcraft
 # These variables will be automatically set by Coolify
 
 # Server Configuration
