--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 
 services:
-  blogstreampro:
+  testcraft:
     build: .
     ports:
       - "3000:3000"
@@ -18,8 +18,8 @@ services:
       retries: 3
       start_period: 40s
     networks:
-      - blogstreampro-network
+      - testcraft-network
 
 networks:
-  blogstreampro-network:
+  testcraft-network:
     driver: bridge
