feat: prepare BlogStreamPro for Coolify VPS deployment
- Add Docker configuration for production deployment
- Update coolify.json for Docker build instead of nixpacks
- Configure health checks and proper port binding
- Add database migrations to startup process
- Update environment variables for production
- Add comprehensive deployment documentation
- Configure persistent file uploads
- Add header component to user and admin dashboards
- Fix various UI and functionality improvements

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@
 PORT=3000
 SESSION_SECRET=your-super-secret-session-key-change-this-in-production
 
-# Super Admin Login: http://localhost:3000/admin
+# Super Admin Login: http://your-domain.com/admin
 # Super Admin Credentials
 SUPER_ADMIN_USERNAME=superadmin
 SUPER_ADMIN_PASSWORD=securepassword123
@@ -13,15 +13,20 @@ SUPER_ADMIN_PASSWORD=securepassword123
 TEST_USER_USERNAME=testuser
 TEST_USER_PASSWORD=testpass123
 
-# Database (MySQL)
-# Replace the values below with your actual database credentials
-# For production, use a managed MySQL service like AWS RDS, Google Cloud SQL, or PlanetScale
+# Database (MySQL) - Required for production
+# For Coolify deployment, this will be provided by Coolify's database service
+# Format: mysql://username:password@host:port/database?ssl-mode=REQUIRED
 DATABASE_URL=mysql://username:password@host:port/database?ssl-mode=REQUIRED
 
-# Example for different providers:
+# Examples for different providers:
+# Coolify MySQL: mysql://mysql:generated_password@mysql_container:3306/database?ssl-mode=REQUIRED
 # PlanetScale: mysql://username:password@host:port/database?ssl-mode=REQUIRED
 # AWS RDS: mysql://username:password@host:port/database?ssl-mode=REQUIRED
 # Local MySQL: mysql://username:password@localhost:3306/database
 
 # Development/Production
 NODE_ENV=production
+
+# Coolify will automatically provide these environment variables:
+# - PORT (the port your app should listen on)
+# - DATABASE_URL (if you configure a database in Coolify)
