--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "license": "MIT",
   "scripts": {
     "dev": "NODE_ENV=development tsx server/index.ts",
+    "dev:restart": "while true; do echo 'Starting server...'; PORT=3000 npm run dev; echo 'Server crashed, restarting in 5 seconds...'; sleep 5; done",
+    "status": "./check-server.sh",
     "dev:next": "next dev -p 3000",
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "build:next": "next build",
-    "start": "NODE_ENV=production node dist/index.js",
+    "start": "npm run db:push && NODE_ENV=production node dist/index.js",
     "start:next": "next start -p 3000",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
@@ -72,13 +74,17 @@
     "next-themes": "^0.4.6",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
+    "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.4.0",
+    "react-markdown": "^10.1.0",
+    "react-quill": "^2.0.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.2",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.2.5",
