--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,17 @@
+# Local server settings
+PORT=3000
+SESSION_SECRET=your-session-secret
+
+# AWS S3 settings (optional) - when set, uploads will go to S3
+AWS_ACCESS_KEY_ID=your_aws_access_key_id
+AWS_SECRET_ACCESS_KEY=your_aws_secret_access_key
+AWS_REGION=us-east-1
+AWS_S3_BUCKET=your-bucket-name
+# Optional custom base url if using CDN or different provider
+AWS_S3_BASE_URL=
+
+# Database (example)
+DATABASE_URL=mysql://user:password@localhost:3306/database
 # Environment Variables for Testcraft
 
 # Server Configuration
