--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev:next": "next dev -p 3000",
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "build:next": "next build",
-    "start": "npm run db:push && NODE_ENV=production node dist/index.js",
+  "start": "NODE_ENV=production node dist/index.js",
+  "start:migrate": "npm run db:push && npm run start",
     "start:next": "next start -p 3000",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
@@ -52,6 +53,8 @@
     "@radix-ui/react-tooltip": "^1.2.0",
     "@tanstack/react-query": "^5.60.5",
     "@types/multer": "^2.0.0",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -69,6 +72,7 @@
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
     "multer": "^2.0.2",
+  "@aws-sdk/client-s3": "^3.441.0",
     "mysql2": "^3.15.2",
     "next": "15",
     "next-themes": "^0.4.6",
@@ -85,6 +89,8 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.2",
     "remark-gfm": "^4.0.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.2.5",
