chore(deploy): commit local changes before merging deploy remote

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,9 @@ AWS_S3_BUCKET=your-bucket-name
 # Optional custom base url if using CDN or different provider
 AWS_S3_BASE_URL=
 
+# Alternative storage: Cloudinary (optional)
+CLOUDINARY_URL=cloudinary://api_key:api_secret@cloud_name
+
 # Database (example)
 DATABASE_URL=mysql://user:password@localhost:3306/database
 # Environment Variables for Testcraft
@@ -44,3 +47,10 @@ NODE_ENV=production
 # Coolify will automatically provide these environment variables:
 # - PORT (the port your app should listen on)
 # - DATABASE_URL (if you configure a database in Coolify)
+
+# Optional: Individual DB variables (alternative to DATABASE_URL)
+DB_HOST=localhost
+DB_PORT=3306
+DB_USER=username
+DB_PASSWORD=password
+DB_NAME=database
